--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
     "require": {
         "php": ">=7.1",
         "amphp/amp": "^2",
-        "amphp/socket": "dev-master as 1.0",
-        "amphp/http": "dev-master as 1.2",
+        "amphp/socket": "^1",
+        "amphp/http": "^1.3",
         "amphp/http-client": "dev-master as 4.0"
     },
     "require-dev": {
-        "amphp/phpunit-util": "dev-master as 2.0.0",
+        "amphp/phpunit-util": "^1.1",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^7 || ^8",
         "friendsofphp/php-cs-fixer": "^2.3",
