--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "amphp/amp": "^2",
         "amphp/socket": "^1",
         "amphp/http": "^1.3",
-        "amphp/http-client": "4.0.0-rc1"
+        "amphp/http-client": "^4.0.0-rc1"
     },
     "require-dev": {
         "amphp/phpunit-util": "^1.1",
