--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,17 @@
     ],
     "require": {
         "php": ">=7.1",
-        "amphp/amp": "^2",
+        "amphp/amp": "^2.3",
         "amphp/socket": "^1",
-        "amphp/http": "^1.3",
-        "amphp/http-client": "^4.0.0-rc1"
+        "amphp/http": "^1.5",
+        "amphp/http-client": "^4.0.0-rc8"
     },
     "require-dev": {
         "amphp/phpunit-util": "^1.1",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^7 || ^8",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/http-server": "v2.x-dev"
+        "amphp/http-server": "^2-rc3"
     },
     "autoload": {
         "psr-4": {
