--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "amphp/http-client": "^4.0.0-rc8"
     },
     "require-dev": {
+        "amphp/file": "^1",
         "amphp/phpunit-util": "^1.1",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^7 || ^8",
@@ -43,6 +44,9 @@
         "psr-4": {
             "Amp\\Http\\Client\\Cookie\\": "test"
         }
+    },
+    "conflict": {
+        "amphp/file": "<1 || >=2"
     }
 }
 
