--- a/composer.json
+++ b/composer.json
@@ -23,17 +23,20 @@
     "require": {
         "php": ">=7.2",
         "amphp/amp": "^2.3",
-        "amphp/socket": "^1",
+        "amphp/dns": "^1.2",
         "amphp/http": "^1.5",
-        "amphp/http-client": "^4.0.0-rc9"
+        "amphp/http-client": "^4",
+        "amphp/sync": "^1.3",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "amphp/socket": "^1",
         "amphp/file": "^1",
         "amphp/phpunit-util": "^1.1",
         "amphp/php-cs-fixer-config": "dev-master",
         "phpunit/phpunit": "^7 || ^8",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/http-server": "^2-rc3"
+        "amphp/http-server": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -49,4 +52,3 @@
         "amphp/file": "<1 || >=2"
     }
 }
-
