--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,10 @@ install:
     fi
 
   - wget https://github.com/php-coveralls/php-coveralls/releases/download/v2.1.0/php-coveralls.phar
+  - wget https://github.com/maglnet/ComposerRequireChecker/releases/download/2.0.0/composer-require-checker.phar
+
   - chmod +x php-coveralls.phar
+  - chmod +x composer-require-checker.phar
 
   - composer show
 
@@ -39,6 +42,9 @@ script:
     else
       vendor/bin/phpunit --coverage-text --verbose --coverage-clover build/logs/clover.xml;
     fi
+
+  - php composer-require-checker.phar check composer.json --config-file $PWD/composer-require-check.json
+
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
