--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": ">=7.2",
+        "ext-filter": "*",
         "amphp/amp": "^2.3",
         "amphp/dns": "^1.2",
         "amphp/http": "^1.5",
