--- a/composer.json
+++ b/composer.json
@@ -21,24 +21,26 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8",
         "ext-filter": "*",
-        "amphp/amp": "^2.3",
-        "amphp/dns": "^1.2",
+        "amphp/amp": "^3-dev",
+        "amphp/dns": "^2-dev",
         "amphp/http": "^1.5",
-        "amphp/http-client": "^4",
-        "amphp/sync": "^1.3",
+        "amphp/http-client": "^5-dev",
+        "amphp/sync": "^2-dev",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "amphp/socket": "^1",
-        "amphp/file": "^1",
-        "amphp/phpunit-util": "^1.1",
+        "amphp/socket": "^2-dev",
+        "amphp/file": "^3-dev",
+        "amphp/phpunit-util": "^2-dev",
         "amphp/php-cs-fixer-config": "dev-master",
-        "phpunit/phpunit": "^7 || ^8",
+        "phpunit/phpunit": "^9",
         "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/http-server": "dev-master"
+        "amphp/http-server": "^3-dev"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Amp\\Http\\Client\\Cookie\\": "src"
@@ -50,7 +52,7 @@
         }
     },
     "conflict": {
-        "amphp/file": "<1 || >=2"
+        "amphp/file": "<3 || >=4"
     },
     "scripts": {
         "check": [
