--- a/composer.json
+++ b/composer.json
@@ -21,23 +21,22 @@
         }
     ],
     "require": {
-        "php": ">=8",
+        "php": ">=8.1",
         "ext-filter": "*",
-        "amphp/amp": "^3-dev",
-        "amphp/dns": "^2-dev",
+        "amphp/amp": "^3",
+        "amphp/dns": "^2",
         "amphp/http": "^1.5",
-        "amphp/http-client": "^5-dev",
-        "amphp/sync": "^2-dev",
-        "psr/http-message": "^1.0"
+        "amphp/http-client": "^5",
+        "amphp/sync": "^2",
+        "psr/http-message": "^1"
     },
     "require-dev": {
-        "amphp/socket": "^2-dev",
-        "amphp/file": "^3-dev",
-        "amphp/phpunit-util": "^2-dev",
-        "amphp/php-cs-fixer-config": "dev-master",
-        "phpunit/phpunit": "^9",
-        "friendsofphp/php-cs-fixer": "^2.3",
-        "amphp/http-server": "^3-dev"
+        "amphp/socket": "^2",
+        "amphp/file": "^3",
+        "amphp/http-server": "^3",
+        "amphp/phpunit-util": "^3",
+        "amphp/php-cs-fixer-config": "^2",
+        "phpunit/phpunit": "^9"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
