--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "amphp/http-server": "^3",
         "amphp/phpunit-util": "^3",
         "amphp/php-cs-fixer-config": "^2",
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "psalm/phar": "^4.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
