--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "amphp/dns": "^2",
         "amphp/http": "^1.5",
         "amphp/http-client": "^5",
+        "amphp/pipeline": "^1",
         "amphp/sync": "^2",
         "psr/http-message": "^1"
     },
