--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "ext-filter": "*",
         "amphp/amp": "^3",
         "amphp/dns": "^2",
-        "amphp/http": "^1.5",
+        "amphp/http": "^2-dev",
         "amphp/http-client": "^5",
         "amphp/sync": "^2",
         "psr/http-message": "^1"
