--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
         "ext-filter": "*",
         "amphp/amp": "^3",
         "amphp/dns": "^2",
-        "amphp/http": "^2-dev",
+        "amphp/http": "^2",
         "amphp/http-client": "^5",
         "amphp/sync": "^2",
-        "psr/http-message": "^1"
+        "psr/http-message": "^1|^2"
     },
     "require-dev": {
         "amphp/socket": "^2",
@@ -39,8 +39,6 @@
         "phpunit/phpunit": "^9",
         "psalm/phar": "^5.6"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Amp\\Http\\Client\\Cookie\\": "src"
